--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header id="mainHeader">
   <!-- Main Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">WEBD6201</a>
+      <a class="navbar-brand" href="#">Portfolio</a><img src= <% logo %> alt="LOGO">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,12 +16,12 @@
         <a class="nav-link" href="/home"><i class="fas fa-igloo"></i> Home</a></li>
           
 
-         <% if(title == 'Products') { %>
+         <% if(title == 'Projects') { %>
           <li id="products" class="nav-item active">
           <% } else { %>
            <li id="products" class="nav-item">
          <% } %>
-         <a class="nav-link" href="/products"><i class="fas fa-map"></i> Products</a></li>
+         <a class="nav-link" href="/projects"><i class="fas fa-map"></i> Products</a></li>
           
          <% if(title == 'Services') { %>
           <li id="services" class="nav-item active">
@@ -44,14 +44,7 @@
           <li id="contact" class="nav-item">
           <% } %>
           <a class="nav-link" href="/contact"><i class="fas fa-mobile-alt"></i> Contact Us</a></li>
-          
-          <% if(title == 'Login') { %>
-          <li id="login" class="nav-item active">
-          <% } else { %>
-          <li id="login" class="nav-item">
-          <% } %>
-          <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-       
+        
         </div>
     </nav>
 </header>
