--- a/views/content/home.ejs
+++ b/views/content/home.ejs
@@ -2,12 +2,15 @@
 <div class="row">
     <div class="col">
             <div class="jumbotron" id="contentArea">
-                <h1 class="display-4">Welcome to my Site!</h1>
+                <h1 class="display-4"><img src="/assets/logo.png" alt="LOGO" style="width:300px;height:200px;"></h1>
 
-                <h2></h2>
+                <h2>Welcome to my website!</h2>
+                <h3>This website was created using Express.js. The purpose of this site is to demonstrate the funtionality of Node.js.</h3>
+                <h3>A portfolio project for WEBD6201 - Durham College</h3>
+                <h4>Click the button below to view some of my projects.</h4>
                 
                 <div id="progressBar"></div>
-                <button type="button" class="btn btn-primary" id="projectsButton">Current Projects</button>
+                <button type="button" class="btn btn-primary" id="projectsButton">Projects</button>
             </div>
     </div>
 </div>
