--- a/views/content/projects.ejs
+++ b/views/content/projects.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col">
           <div class="jumbotron" id="contentArea">
-              <h1 class="display-4">Interesting Projects Live Here!</h1>
+              <h1 class="display-4">Projects</h1>
 
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="https://picsum.photos/id/1081/600/400">
