--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,14 @@
 
 <%- include ./content/contact.ejs %>
 
+<% } else if(title == 'Projects') { %>
+
+<%- include ./content/projects.ejs %>
+
+<% } else if(title == 'Services') { %>
+
+<%- include ./content/services.ejs %>
+
 <% } %>
 
 </main> 
