--- a/views/content/services.ejs
+++ b/views/content/services.ejs
@@ -1,11 +1,16 @@
 <!-- Main Content -->
 <div class="row">
     <div class="col">
-            <div class="jumbotron" id="contentArea">
-                <h1 class="display-4">An Interesting List of my Services</h1>
+        <div class="jumbotron" id="contentArea">
+            <h1 class="display-4">My Experience</h1>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id doloremque quos odit quia, dolorem illum sit quaerat mollitia veritatis excepturi, consectetur quam libero natus ratione aperiam ab neque molestiae delectus!</p>
-            </div>
+            <ul class="list-group">
+                <li class="list-group-item"><b>Game Design:</b> Animation, Modeling, Texturing, Rendering, Level Design</li>
+                <li class="list-group-item"><b>Programming:</b> C++, C#, Java</li>
+                <li class="list-group-item"><b>Web Development:</b> Javascript, PHP, JSP, ASP, HTML, CSS, Node.js</li>
+                <li class="list-group-item"><b>Systems Development:</b> Database and Application Design</li>
+            </ul>
+        </div>
     </div>
 </div>
 
