--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header id="mainHeader">
   <!-- Main Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Portfolio</a><img src= <% logo %> alt="LOGO">
+      <a class="navbar-brand" href="#">Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,11 +17,11 @@
           
 
          <% if(title == 'Projects') { %>
-          <li id="products" class="nav-item active">
+          <li id="projects" class="nav-item active">
           <% } else { %>
-           <li id="products" class="nav-item">
+           <li id="projects" class="nav-item">
          <% } %>
-         <a class="nav-link" href="/projects"><i class="fas fa-map"></i> Products</a></li>
+         <a class="nav-link" href="/projects"><i class="fas fa-map"></i> Projects</a></li>
           
          <% if(title == 'Services') { %>
           <li id="services" class="nav-item active">
@@ -36,14 +36,14 @@
           <% } else { %>
           <li id="about" class="nav-item">
           <% } %>
-          <a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> About Us</a></li>
+          <a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> About Me</a></li>
 
           <% if(title == 'Contact') { %>
           <li id="contact" class="nav-item active">
           <% } else { %>
           <li id="contact" class="nav-item">
           <% } %>
-          <a class="nav-link" href="/contact"><i class="fas fa-mobile-alt"></i> Contact Us</a></li>
+          <a class="nav-link" href="/contact"><i class="fas fa-mobile-alt"></i> Contact Me</a></li>
         
         </div>
     </nav>
