--- a/views/content/contact.ejs
+++ b/views/content/contact.ejs
@@ -1,6 +1,6 @@
 <!-- Main Content -->
 <div class="row">
-    <div class="offset-md-3 col-md-6 col-sm-12">
+    <div class="offset-md-1 col-md-6 col-sm-12">
           <div class="jumbotron" id="contentArea">
               <h1 class="display-4">Contact Me.</h1>
               <div id="errorMessage" class="alert alert-danger">
@@ -39,14 +39,23 @@
     </div>
     <div class="col-md-3 col-sm-12">
       <aside>
-          
+        
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">My Contact Information</h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Sterling Wenzelbach</li>
+            <li class="list-group-item">555-555-5555</li>
+            <li class="list-group-item">sterling.wenzelbach@dcmail.ca</li>
+          </ul>  
+        </div>
+        
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Social Media</h5>
-            <p class="card-text">My Connections:</p>
-            Facebook : <a href=""><i class="card-link fab fa-facebook-square"></i></a>
-            LinkedIn : <a href=""><i class="card-link fab fa-linkedin"></i></a>
-            Instagram: <a href=""><i class="card-link fab fa-instagram"></i></a>
+            Facebook : <a href="https://www.facebook.com/sterling.wenzelbach"><i class="card-link fab fa-facebook-square"></i></a>
+            LinkedIn : <a href="https://www.linkedin.com/in/sterlingw/"><i class="card-link fab fa-linkedin"></i></a>
           </div>
         </div>
       </aside>
