--- a/views/content/about.ejs
+++ b/views/content/about.ejs
@@ -2,10 +2,9 @@
 <div class="row">
     <div class="col">
             <div class="jumbotron" id="contentArea">
-                <h1 class="display-4">Interesting Stuff about me...</h1>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur doloremque tenetur. Sint asperiores tempora, odit nisi, libero voluptatum quam optio consequuntur magnam dolore id eius laboriosam? Vel, quaerat deleniti.</p>
+                <h1 class="display-4">About me</h1>
             </div>
+            <p></p>
     </div>
 </div>
 
