--- a/views/content/about.ejs
+++ b/views/content/about.ejs
@@ -4,7 +4,10 @@
             <div class="jumbotron" id="contentArea">
                 <h1 class="display-4">About me</h1>
             </div>
-            <p></p>
+            <p><img src="/assets/me.jpg" alt="Author"></p>
+            <h3>Hello, my name is Sterling Wenzelbach.</h3>
+            <p>I am currently studying computer programming at Durham College. I will be graduating on April 17, 2020.</p>
+            <p>Check out the links on the nav bar to see my experience and projects.</p>
     </div>
 </div>
 
