--- a/views/content/services.ejs
+++ b/views/content/services.ejs
@@ -11,6 +11,9 @@
                 <li class="list-group-item"><b>Systems Development:</b> Database and Application Design</li>
             </ul>
         </div>
+        <div>
+            
+        </div>
     </div>
 </div>
 
