--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -26,6 +26,14 @@
 
 <%- include ./content/register.ejs %>
 
+<% } else if(title == 'Projects') { %>
+
+<%- include ./content/projects.ejs %>
+
+<% } else if(title == 'Services') { %>
+
+<%- include ./content/services.ejs %>
+    
 <% } %>
 
 </main> 
