--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -16,12 +16,12 @@
         <a class="nav-link" href="/home"><i class="fas fa-igloo"></i> Home</a></li>
           
 
-         <% if(title == 'Products') { %>
-          <li id="products" class="nav-item active">
+         <% if(title == 'Projects') { %>
+          <li id="projects" class="nav-item active">
           <% } else { %>
-           <li id="products" class="nav-item">
+           <li id="projects" class="nav-item">
          <% } %>
-         <a class="nav-link" href="/products"><i class="fas fa-map"></i> Products</a></li>
+         <a class="nav-link" href="/projects"><i class="fas fa-map"></i> Projects</a></li>
           
          <% if(title == 'Services') { %>
           <li id="services" class="nav-item active">
