--- a/server/views/content/register.ejs
+++ b/server/views/content/register.ejs
@@ -54,8 +54,8 @@
                 <div class="form-group">
                   <div class="row">
                     <div class="col-md-6">
-                      <input class="form-control" type="text" id="displayName" 
-                      name="displayName" 
+                      <input class="form-control" type="text" id="contactnumber" 
+                      name="contactnumber" 
                       placeholder="Enter Display Name" 
                       autocomplete="off"
                       required>
