--- a/server/views/contacts/addedit.ejs
+++ b/server/views/contacts/addedit.ejs
@@ -32,7 +32,7 @@
                     <input type="tel" class="form-control" 
                     id="ContactNumberTextField" 
                     placeholder="Enter Contact Number"
-                    name="contactNumber" 
+                    name="contactnumber" 
                     value="<%= contact.contactnumber %>"
                     required>
                 </div>
