--- a/server/views/contacts/index.ejs
+++ b/server/views/contacts/index.ejs
@@ -12,7 +12,7 @@
             <table class="table table-bordered table-striped table-hover">
                 <!-- Header Row -->
                 <tr>
-                    <th class="text-center">First Name</th>
+                    <th class="text-center">User Name</th>
                     <th class="text-center">Email</th>
                     <th class="text-center">Contact Number</th>
                     <th class="text-center"></th>
@@ -22,9 +22,9 @@
                 <!-- Repeatable Template Row -->
                 <% for(let count = 0; count < contactList.length; count++) { %>
                 <tr>
-                    <td class="text-center"><%= contactList[count].firstName %></td>
+                    <td class="text-center"><%= contactList[count].username %></td>
                     <td class="text-center"><%= contactList[count].email %></td>
-                    <td class="text-center"><%= contactList[count].contactNumber %></td>
+                    <td class="text-center"><%= contactList[count].contactnumber %></td>
                     <td class="text-center">
                         <a href="/contact-list/edit/<%= contactList[count]._id %>" 
                             class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Edit</a>
